Fixed bug in Firefox for alignment of the relevance number

--- a/core/app/assets/stylesheets/facts/evidence.css.less
+++ b/core/app/assets/stylesheets/facts/evidence.css.less
@@ -60,7 +60,7 @@ li.evidence-item {
     }
 
     .authorities-evidence {
-      display: inline-block;
+      display: block;
       text-align: center;
       line-height: normal;
       margin: 10px 0 10px 0;
